--- a/CasaEscuela.AppWebMVC/Views/Estudiantes/VistaReporte.cshtml
+++ b/CasaEscuela.AppWebMVC/Views/Estudiantes/VistaReporte.cshtml
@@ -45,7 +45,13 @@
 <body class="p-4">
     <div class="header-box d-flex justify-content-between align-items-center">
         <div>
-            <h2 class="mb-0 text-primary fw-bold">CASA ESCUELA</h2>
+            <div class="text-center" style="margin-top:-18px;">
+                <a href="/home">
+                    <img src="/img/logoCasaEscuela.png"
+                         alt="Casa Escuela"
+                         style="max-width:200px; height:auto;">
+                </a>
+            </div>
             <p class="mb-0 text-secondary">Expediente Consolidado del Estudiante</p>
         </div>
         <div class="text-end">
