--- a/CasaEscuela.AppWebMVC/Views/Usuario/Login.cshtml
+++ b/CasaEscuela.AppWebMVC/Views/Usuario/Login.cshtml
@@ -8,7 +8,7 @@
     <title>Acceso - Casa Escuela</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="icon" type="image/png"  />
+    <link rel="icon" type="image/png" href="@Url.Content("~/img/logo.png")" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
@@ -190,8 +190,7 @@
             <div class="col-lg-6 brand-panel">
                 <div class="brand-header brand-content">
                     <div class="d-flex align-items-center gap-3">
-                        <img src="~/img/logoCasaEscuela.png" alt="Logo" style="max-height: 350px; width: auto; position: relative; top: -75px; margin-left: -60px;" />
-                        @* <span class="h5 mb-0 fw-bold tracking-tight">Casa Escuela</span> *@
+                        <img src="~/img/logo.png" alt="Logo" />
                     </div>
                 </div>
 
