--- a/CasaEscuela.AppWebMVC/Views/Anamnesis/Create.cshtml
+++ b/CasaEscuela.AppWebMVC/Views/Anamnesis/Create.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="container py-4">
-    <form asp-action="Create" id="anamnesisForm">
+    <form asp-action="Create" id="anamnesisForm" enctype="multipart/form-data">
         @Html.AntiForgeryToken()
         <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
 
@@ -165,6 +165,11 @@
                     <div class="col-12 col-md-6">
                         <label asp-for="Anamnesis.Entrevistador" class="form-label fw-bold"></label>
                         <input asp-for="Anamnesis.Entrevistador" class="form-control" />
+                    </div>
+                     <div class="col-12 mt-4 pt-3 border-top">
+                        <label class="form-label fw-bold"><i class="ti ti-paperclip me-2"></i>Adjuntar Documentos (Partida Nacimiento, Notas anteriores, etc)</label>
+                        <input type="file" name="Anamnesis.ArchivosSubidos" multiple class="form-control" />
+                        <div class="form-text">Puede seleccionar múltiples archivos.</div>
                     </div>
                 </div>
             </div>
