--- a/CasaEscuela.AppWebMVC/Views/Anamnesis/Create.cshtml
+++ b/CasaEscuela.AppWebMVC/Views/Anamnesis/Create.cshtml
@@ -5,7 +5,10 @@
 }
 
 <div class="container py-4">
-    <form asp-action="Create" id="anamnesisForm" enctype="multipart/form-data">
+    <form asp-action="Save" id="anamnesisForm" enctype="multipart/form-data">
+        <input type="hidden" asp-for="Estudiante.IdEstudiante" />
+        <input type="hidden" asp-for="Anamnesis.IdAnamnesis" />
+
         @Html.AntiForgeryToken()
         <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
 
