--- a/CasaEscuela.AppWebMVC/Views/Preceptoria/Index.cshtml
+++ b/CasaEscuela.AppWebMVC/Views/Preceptoria/Index.cshtml
@@ -75,6 +75,7 @@
                                                 </li>
                                                 <li><hr class="dropdown-divider"></li>
                                                 <li>
+                                                    <a href="c:\users\usuario\onedrive\desktop\casa-escuela\casaescuela.bl.dtos\actionsdto.cs">c:\users\usuario\onedrive\desktop\casa-escuela\casaescuela.bl.dtos\actionsdto.cs</a>
                                                     <a class="dropdown-item text-danger" href="#">
                                                         <i class="ti ti-trash me-2"></i>Eliminar
                                                     </a>
